<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="registrationViewModel"
            type="com.mileticgo.app.view_model.RegistrationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/registration_background"
        tools:context=".view.RegistrationFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_top_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ll_username_container"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent=".85"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/ll_email_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias=".5"
                app:layout_constraintStart_toStartOf="parent">

                <EditText
                    android:id="@+id/et_user_name"
                    style="@style/RegistrationEditBoxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    android:inputType="text" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ll_email_container"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent=".85"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <EditText
                    android:id="@+id/et_login_email"
                    style="@style/RegistrationEditBoxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_email_text"
                    android:inputType="textEmailAddress" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".5"
            app:layout_constraintTop_toBottomOf="@+id/cl_top_container">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ll_password_container"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent=".85"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/et_login_password"
                    style="@style/RegistrationEditBoxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_password_text"
                    android:inputType="textPassword" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ll_repeat_password_container"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent=".85"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias=".5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_password_container">

                <EditText
                    android:id="@+id/et_repeat_register_password"
                    style="@style/RegistrationEditBoxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_repeat_password"
                    android:inputType="textPassword" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <Button
                android:id="@+id/btn_login"
                style="@style/MainMenuButtonStyle"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent=".6"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:onClick="@{() -> registrationViewModel.register()}"
                android:text="@string/register_btn_text"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_repeat_password_container" />

            <TextView
                android:id="@+id/tv_register_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:onClick="@{() -> registrationViewModel.alreadyRegisteredClick()}"
                android:text="@string/already_registered"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <RelativeLayout
                android:id="@+id/progress_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <ProgressBar
                    android:id="@+id/pb_loader"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />

            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>